# remodance

./: package.json  pnpm-lock.yaml  release.config.cjs  release.config.js
.github/workflows/: release.yml  test-token.yml  test.yml
docs/: blueprint.md  cross-platform-testing.md  tauri-development-notes.md
scripts/: platform-test-env.sh  test-idle-detection.js
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: lib.rs  main.rs
